--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,4 @@
 # These owners will be the default owners for everything in
-# the repo. Unless a later match takes precedence,
-# @global-owner1 and @global-owner2 will be requested for
+# the repo. @jdevalk and @aristath will be requested for
 # review when someone opens a pull request.
 *       @jdevalk @aristath
